--- a/JEE6/org.jeegen.jee6.ui/plugin.xml
+++ b/JEE6/org.jeegen.jee6.ui/plugin.xml
@@ -2,161 +2,156 @@
 <?eclipse version="3.0"?>
 
 <plugin>
+	<extension point="org.eclipse.ui.editors">
+		<editor
+			class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+			contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+			default="true"
+			extensions="jee6"
+			id="org.jeegen.jee6.Dsl"
+			icon="icons/jee6_16.gif"
+			name="JEE6 Editor">
+		</editor>
+	</extension>
 
-    <extension point="org.eclipse.ui.editors">
-        <editor
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="jee6"
-            id="org.jeegen.jee6.Dsl"
-            icon="icons/jee6_16.gif"
-            name="JEE6 Editor">
-        </editor>
-    </extension>
-    <extension
-        point="org.eclipse.ui.handlers">
-        <handler
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
-            commandId="org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclaration">
-            <activeWhen>
-                <reference
-                    definitionId="org.jeegen.jee6.Dsl.Editor.opened">
-                </reference>
-            </activeWhen>
-        </handler>
-        <handler
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
-            commandId="org.jeegen.jee6.Dsl.validate">
-         <activeWhen>
-            <reference
-                    definitionId="org.jeegen.jee6.Dsl.Editor.opened">
-            </reference>
-         </activeWhen>
-      </handler>
-    </extension>
-    <extension point="org.eclipse.core.expressions.definitions">
-        <definition id="org.jeegen.jee6.Dsl.Editor.opened">
-            <and>
-                <reference definitionId="isActiveEditorAnInstanceOfXtextEditor"/>
-                <with variable="activeEditor">
-                    <test property="org.eclipse.xtext.ui.editor.XtextEditor.languageName" 
-                        value="org.jeegen.jee6.Dsl" 
-                        forcePluginActivation="true"/>
-                </with>        
-            </and>
-        </definition>
-    </extension>
-    <extension point="org.eclipse.ui.preferencePages">
-        <page
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
-            id="org.jeegen.jee6.Dsl"
-            name="JEE6 Generator">
-            <keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
-        </page>
-        <page
-            category="org.jeegen.jee6.Dsl"
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
-            id="org.jeegen.jee6.Dsl.coloring"
-            name="Syntax Coloring">
-            <keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
-        </page>
-        <page
-            category="org.jeegen.jee6.Dsl"
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
-            id="org.jeegen.jee6.Dsl.templates"
-            name="Templates">
-            <keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
-        </page>
-    </extension>
-    <extension
-            point="org.eclipse.ui.propertyPages">
-        <page
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
-            id="org.jeegen.jee6.Dsl"
-            name="Dsl">
-            <keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
-            <enabledWhen>
-	            <adapt type="org.eclipse.core.resources.IProject"/>
+	<extension point="org.eclipse.ui.handlers">
+		<handler
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
+				commandId="org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclaration">
+			<activeWhen>
+				<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened">
+				</reference>
+			</activeWhen>
+		</handler>
+		<handler
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
+				commandId="org.jeegen.jee6.Dsl.validate">
+			<activeWhen>
+				<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened">
+				</reference>
+			</activeWhen>
+		</handler>
+	</extension>
+
+	<extension point="org.eclipse.core.expressions.definitions">
+		<definition id="org.jeegen.jee6.Dsl.Editor.opened">
+			<and>
+				<reference definitionId="isActiveEditorAnInstanceOfXtextEditor"/>
+				<with variable="activeEditor">
+					<test property="org.eclipse.xtext.ui.editor.XtextEditor.languageName" 
+						value="org.jeegen.jee6.Dsl" 
+						forcePluginActivation="true"/>
+				</with>
+			</and>
+		</definition>
+	</extension>
+
+	<extension point="org.eclipse.ui.preferencePages">
+		<page
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+				id="org.jeegen.jee6.Dsl"
+				name="JEE6 Generator">
+			<keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
+		</page>
+		<page
+				category="org.jeegen.jee6.Dsl"
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
+				id="org.jeegen.jee6.Dsl.coloring"
+				name="Syntax Coloring">
+			<keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
+		</page>
+		<page
+				category="org.jeegen.jee6.Dsl"
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
+				id="org.jeegen.jee6.Dsl.templates"
+				name="Templates">
+			<keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
+		</page>
+	</extension>
+
+	<extension point="org.eclipse.ui.propertyPages">
+		<page
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+				id="org.jeegen.jee6.Dsl"
+				name="Dsl">
+			<keywordReference id="org.jeegen.jee6.ui.keyword_Dsl"/>
+			<enabledWhen>
+				<adapt type="org.eclipse.core.resources.IProject"/>
 			</enabledWhen>
-	        <filter name="projectNature" value="org.eclipse.xtext.ui.shared.xtextNature"/>
-        </page>
-    </extension>
-    <extension
-        point="org.eclipse.ui.keywords">
-        <keyword
-            id="org.jeegen.jee6.ui.keyword_Dsl"
-            label="Dsl"/>
-    </extension>
-    <extension
-         point="org.eclipse.ui.commands">
-      <command
-            description="Trigger expensive validation"
-            id="org.jeegen.jee6.Dsl.validate"
-            name="Validate">
-      </command>
-    </extension>
-    <extension point="org.eclipse.ui.menus">
-        <menuContribution
-            locationURI="popup:#TextEditorContext?after=group.edit">
-             <command
-                 commandId="org.jeegen.jee6.Dsl.validate"
-                 style="push"
-                 tooltip="Trigger expensive validation">
-            <visibleWhen checkEnabled="false">
-                <reference
-                    definitionId="org.jeegen.jee6.Dsl.Editor.opened">
-                </reference>
-            </visibleWhen>
-         </command>  
-         </menuContribution>
-    </extension>
-    <extension point="org.eclipse.ui.menus">
+			<filter name="projectNature" value="org.eclipse.xtext.ui.shared.xtextNature"/>
+		</page>
+	</extension>
+
+	<extension point="org.eclipse.ui.keywords">
+		<keyword
+			id="org.jeegen.jee6.ui.keyword_Dsl"
+			label="Dsl"/>
+	</extension>
+
+	<extension point="org.eclipse.ui.commands">
+		<command
+			description="Trigger expensive validation"
+			id="org.jeegen.jee6.Dsl.validate"
+			name="Validate">
+		</command>
+	</extension>
+
+	<extension point="org.eclipse.ui.menus">
+		<menuContribution locationURI="popup:#TextEditorContext?after=group.edit">
+			<command
+					commandId="org.jeegen.jee6.Dsl.validate"
+					style="push"
+					tooltip="Trigger expensive validation">
+				<visibleWhen checkEnabled="false">
+					<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened">
+					</reference>
+				</visibleWhen>
+			 </command>
+	 	</menuContribution>
+	</extension>
+
+	<extension point="org.eclipse.ui.menus">
 		<menuContribution locationURI="popup:#TextEditorContext?endof=group.find">
 			<command commandId="org.eclipse.xtext.ui.editor.FindReferences">
 				<visibleWhen checkEnabled="false">
-                	<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened">
-                	</reference>
-            	</visibleWhen>
+					<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened">
+					</reference>
+				</visibleWhen>
 			</command>
 		</menuContribution>
 	</extension>
+
 	<extension point="org.eclipse.ui.handlers">
-	    <handler
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
-            commandId="org.eclipse.xtext.ui.editor.FindReferences">
-            <activeWhen>
-                <reference
-                    definitionId="org.jeegen.jee6.Dsl.Editor.opened">
-                </reference>
-            </activeWhen>
-        </handler>
-    </extension>   
+		<handler
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
+				commandId="org.eclipse.xtext.ui.editor.FindReferences">
+			<activeWhen>
+				<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened">
+				</reference>
+			</activeWhen>
+		</handler>
+	</extension>   
 
-<!-- adding resource factories -->
-
-	<extension
-		point="org.eclipse.emf.ecore.extension_parser">
+	<!-- adding resource factories -->
+	<extension point="org.eclipse.emf.ecore.extension_parser">
 		<parser
 			class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
 			type="jee6">
 		</parser>
 	</extension>
+
 	<extension point="org.eclipse.xtext.extension_resourceServiceProvider">
-        <resourceServiceProvider
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
-            uriExtension="jee6">
-        </resourceServiceProvider>
-    </extension>
-
-
+		<resourceServiceProvider
+			class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
+			uriExtension="jee6">
+		</resourceServiceProvider>
+	</extension>
 
 	<!-- Quick Outline -->
-	<extension
-		point="org.eclipse.ui.handlers">
+	<extension point="org.eclipse.ui.handlers">
 		<handler 
-			class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.outline.quickoutline.ShowQuickOutlineActionHandler"
-			commandId="org.eclipse.xtext.ui.editor.outline.QuickOutline">
+				class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.outline.quickoutline.ShowQuickOutlineActionHandler"
+				commandId="org.eclipse.xtext.ui.editor.outline.QuickOutline">
 			<activeWhen>
 				<reference
 					definitionId="org.jeegen.jee6.Dsl.Editor.opened">
@@ -164,8 +159,8 @@
 			</activeWhen>
 		</handler>
 	</extension>
-	<extension
-		point="org.eclipse.ui.commands">
+
+	<extension point="org.eclipse.ui.commands">
 		<command
 			description="Open the quick outline."
 			id="org.eclipse.xtext.ui.editor.outline.QuickOutline"
@@ -173,36 +168,33 @@
 		</command>
 	</extension>
 	<extension point="org.eclipse.ui.menus">
-		<menuContribution
-			locationURI="popup:#TextEditorContext?after=group.open">
+		<menuContribution locationURI="popup:#TextEditorContext?after=group.open">
 			<command commandId="org.eclipse.xtext.ui.editor.outline.QuickOutline"
-				style="push"
-				tooltip="Open Quick Outline">
+					style="push"
+					tooltip="Open Quick Outline">
 				<visibleWhen checkEnabled="false">
 					<reference definitionId="org.jeegen.jee6.Dsl.Editor.opened"/>
 				</visibleWhen>
 			</command>
 		</menuContribution>
 	</extension>
-   <!-- quickfix marker resolution generator -->
-   <extension
-         point="org.eclipse.ui.ide.markerResolution">
-      <markerResolutionGenerator
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator">
-      </markerResolutionGenerator>
-   </extension>
 
-   <extension point="org.eclipse.ui.newWizards">
-      <category id="org.jeegen.jee.ui.category" name="JEE-Generators">
-      </category>
-      <wizard
-            category="org.jeegen.jee.ui.category"
-            class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.jeegen.jee6.ui.wizard.Jee6AntNewProjectWizard"
-            icon="icons/jee6_32.gif"
-            id="org.jeegen.jee6.ui.wizard.DslNewProjectWizard"
-            name="JEE6 Generator Project (Ant based)"
-            project="true">
-      </wizard>
-   </extension>
+	<!-- quickfix marker resolution generator -->
+	<extension point="org.eclipse.ui.ide.markerResolution">
+		<markerResolutionGenerator class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator">
+		</markerResolutionGenerator>
+	</extension>
 
+	<extension point="org.eclipse.ui.newWizards">
+		<category id="org.jeegen.jee.ui.category" name="JEE-Generators">
+		</category>
+		<wizard
+			category="org.jeegen.jee.ui.category"
+			class="org.jeegen.jee6.ui.DslExecutableExtensionFactory:org.jeegen.jee6.ui.wizard.Jee6AntNewProjectWizard"
+			icon="icons/jee6_32.gif"
+			id="org.jeegen.jee6.ui.wizard.DslNewProjectWizard"
+			name="JEE6 Generator Project (Ant based)"
+			project="true">
+		</wizard>
+	</extension>
 </plugin>
