--- a/JEE6/org.jeegen.jee6.feature/pom.xml
+++ b/JEE6/org.jeegen.jee6.feature/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<name>JEE6 DSL Feature</name>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee6.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
