--- a/JEE7/org.jeegen.jee7/pom.xml
+++ b/JEE7/org.jeegen.jee7/pom.xml
@@ -113,6 +113,7 @@
 			<plugin>
 				<groupId>org.fornax.toolsupport</groupId>
 				<artifactId>fornax-oaw-m2-plugin</artifactId>
+				<version>3.6.0</version>
 				<executions>
 					<execution>
 						<id>xtext</id>
