--- a/JEE7/org.jeegen.jee7.util/build.xml
+++ b/JEE7/org.jeegen.jee7.util/build.xml
@@ -12,7 +12,7 @@
 	<property name="lib-path"      value="./lib"/>
 	<property name="doc-path"      value="../api"/>
 
-	<property name="jboss.home"    value="/opt/wildfly-8.0.0.Final"/>
+	<property name="jboss.home"    value="/opt/wildfly"/>
 	<property name="jboss.lib"     value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"  value="${jboss.home}/standalone/deployments"/>
 
