* Added URLs as HTML5 input type.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@827 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/FacesGenerated/build.xml
+++ b/JEE7/FacesGenerated/build.xml
@@ -127,7 +127,7 @@
 				<include name="*.*"/>
 			</fileset>
 		</copy>
-		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false" failonerror="true">
+		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false" failonerror="true" source="1.8">
 			<classpath refid="compile.path"/>
 		</javac>
 	</target>
