--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -53,14 +53,15 @@
 			<include name="org.eclipse.xtend*.jar"/>
 			<include name="org.eclipse.xtext*.jar"/>
 			<include name="org.eclipse.text*.jar"/>
-			<include name="org.eclipse.jdt*.jar"/>
+			<include name="org.eclipse.core*.jar"/>
 			<include name="org.eclipse.equi*.jar"/>
+			<include name="org.eclipse.jdt*.jar"/>
+			<include name="org.eclipse.osgi*.jar"/>
 			<include name="javax.inject*.jar"/>
 			<include name="stringtemplate*.jar"/>
 			<include name="org.objectweb.asm_5.0.1*.jar"/>
 
-			<exclude name="**/*source*.jar"/>
-			<exclude name="**/*src*.jar"/>
+			<exclude name="**/*.source*.jar"/>
 			<exclude name="**/*editor*.jar"/>
 		</fileset>
 		<pathelement path="${res-path}" />
