--- a/JEE7/FacesTest/build.xml
+++ b/JEE7/FacesTest/build.xml
@@ -27,7 +27,7 @@
 	<property name="instr-path"           value="./instr"/>	
 	<property name="emma.enabled"         value="true"/>
 
-	<property name="jboss.home"           value="/opt/wildfly-8.0.0.Final"/>
+	<property name="jboss.home"           value="/opt/wildfly"/>
 	<property name="jboss.lib"            value="${jboss.home}/modules"/>
 	<property name="jboss.module"         value="${jboss.lib}/org/jeegen/jee7/ldap/main"/>
 	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
@@ -76,14 +76,15 @@
 			<include name="org.eclipse.xtend*.jar"/>
 			<include name="org.eclipse.xtext*.jar"/>
 			<include name="org.eclipse.text*.jar"/>
-			<include name="org.eclipse.jdt*.jar"/>
+			<include name="org.eclipse.core*.jar"/>
 			<include name="org.eclipse.equi*.jar"/>
+			<include name="org.eclipse.jdt*.jar"/>
+			<include name="org.eclipse.osgi*.jar"/>
 			<include name="javax.inject*.jar"/>
 			<include name="stringtemplate*.jar"/>
 			<include name="org.objectweb.asm_5.0.1*.jar"/>
 
-			<exclude name="**/*source*.jar"/>
-			<exclude name="**/*src*.jar"/>
+			<exclude name="**/*.source*.jar"/>
 			<exclude name="**/*editor*.jar"/>
 		</fileset>
 	</path>
