* Corrected target clobber.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@849 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/FacesGenerated/build.xml
+++ b/JEE7/FacesGenerated/build.xml
@@ -105,6 +105,7 @@
 				<include name="**/beans/**"/>
 				<include name="**/dao/**"/>
 				<include name="**/handler/**"/>
+				<include name="**/entities/Startup*"/>
 			</fileset>
 			<fileset dir="${res-path}">
 				<include name="**/*"/>
