* Version bump for JEE utilities.  * Moved JEE utils to appropriate place after creating a new JEE project.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@852 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/org.jeegen.jee6.util/pom.xml
+++ b/JEE6/org.jeegen.jee6.util/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<name>jee6-utils</name>
-	<version>1.1.16</version>
+	<version>1.1.17-SNAPSHOT</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>jee6.utils</artifactId>
 	<packaging>jar</packaging>
