--- a/JEE7/org.jeegen.jee7.ui/pom.xml
+++ b/JEE7/org.jeegen.jee7.ui/pom.xml
@@ -58,7 +58,7 @@
 				<executions>
 					<execution>
 						<id>copy</id>
-						<phase>verify</phase>
+						<phase>compile</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
@@ -67,7 +67,7 @@
 								<artifactItem>
 									<groupId>org.jeegen</groupId>
 									<artifactId>jee7.utils</artifactId>
-									<version>1.0.8</version>
+									<version>1.0.9</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${basedir}/resources</outputDirectory>
