--- a/JEE7/org.jeegen.jee7.feature/pom.xml
+++ b/JEE7/org.jeegen.jee7.feature/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.jeegen</groupId>
 		<artifactId>releng</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../../Updatesite/org.jeegen.releng/pom.xml</relativePath>
 	</parent>
 
 	<name>JEE7 DSL Feature</name>
-	<version>1.2.3-SNAPSHOT</version>
+	<version>1.2.3</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee7.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
