--- a/Updatesite/org.jeegen.updatesite/pom.xml
+++ b/Updatesite/org.jeegen.updatesite/pom.xml
@@ -6,11 +6,11 @@
 		<relativePath>../org.jeegen.releng/pom.xml</relativePath>
 		<groupId>org.jeegen</groupId>
 		<artifactId>releng</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<name>JEE  DSL Update Site</name>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>updatesite</artifactId>
 	<packaging>eclipse-repository</packaging>
