--- a/JEE7/org.jeegen.jee7/pom.xml
+++ b/JEE7/org.jeegen.jee7/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<name>JEE7 DSL</name>
-	<version>1.2.3</version>
+	<version>1.2.4-SNAPSHOT</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee7</artifactId>
 	<packaging>eclipse-plugin</packaging>
