--- a/Updatesite/org.jeegen.updatesite/pom.xml
+++ b/Updatesite/org.jeegen.updatesite/pom.xml
@@ -15,6 +15,10 @@
 	<artifactId>updatesite</artifactId>
 	<packaging>eclipse-repository</packaging>
 
+	<properties>
+		<target.update.site>target/repository</target.update.site>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -25,29 +29,38 @@
 					<includeAllDependencies>false</includeAllDependencies>
 				</configuration>
 			</plugin>
+
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-director-plugin</artifactId>
-				<version>${tycho-version}</version>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-p2-extras-plugin</artifactId>
+				<version>${tycho-extras-version}</version>
+				<inherited>false</inherited>
 				<executions>
 					<execution>
-						<id>materialize-products</id>
+						<id>append</id>
+						<phase>package</phase>
 						<goals>
-							<goal>materialize-products</goal>
+							<goal>mirror</goal>
 						</goals>
-					</execution>
-					<execution>
-						<id>archive-products</id>
-						<goals>
-							<goal>archive-products</goal>
-						</goals>
+						<configuration>
+							<source>
+								<repository>
+									<url>${source.update.site}</url>
+									<layout>p2</layout>
+								</repository>
+							</source>
+							<destination>${target.update.site}</destination>
+							<compress>true</compress>
+							<append>true</append>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
 				<groupId>org.jboss.tools.tycho-plugins</groupId>
 				<artifactId>repository-utils</artifactId>
-				<version>0.19.0-SNAPSHOT</version>
+				<version>0.22.0</version>
 				<executions>
 					<execution>
 						<id>generate-facade</id>
@@ -65,9 +78,6 @@
 								<update.site.version>${project.version}</update.site.version>
 								<target.eclipse.version>${target.eclipse.version}</target.eclipse.version>
 							</symbols>
-							<associateSites>
-								<site>http://download.itemis.com/updates/releases/2.0.0/</site>
-							</associateSites>
 						</configuration>
 					</execution>
 				</executions>
