--- a/JEE7/MinimalWebApplicationDao/build.xml
+++ b/JEE7/MinimalWebApplicationDao/build.xml
@@ -8,7 +8,7 @@
 
 	<property name="war"              value="minimal.war"/>
 	
-	<property name="jboss.home"       value="/opt/wildfly-8.0.0.Final"/>
+	<property name="jboss.home"       value="/opt/wildfly"/>
 	<property name="jboss.lib"        value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"     value="${jboss.home}/standalone/deployments"/>
 
