--- a/JEE7/org.jeegen.jee7.ui/pom.xml
+++ b/JEE7/org.jeegen.jee7.ui/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<name>JEE7 DSL UI</name>
-	<version>1.2.4</version>
+	<version>1.2.5-SNAPSHOT</version>
 	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee7.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
