--- a/Updatesite/org.jeegen.releng/pom.xml
+++ b/Updatesite/org.jeegen.releng/pom.xml
@@ -15,6 +15,7 @@
 		<tycho-extras-version>0.24.0</tycho-extras-version>
 		<antrun-version>1.8</antrun-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<eclipse.distro>mars</eclipse.distro>
 		<source.update.site>http://www.jee-generator.org/updates/release/</source.update.site>
 	</properties>
 
@@ -70,8 +71,6 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!-- Avoid the generation of maven archive information in the META-INF 
-					folder -->
 				<plugin>
 					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-packaging-plugin</artifactId>
@@ -84,7 +83,7 @@
 						</archive>
 					</configuration>
 				</plugin>
-				<!-- TYCHO -->
+
 				<plugin>
 					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
@@ -95,6 +94,7 @@
 						<target>7.0</target>
 					</configuration>
 				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
@@ -103,16 +103,13 @@
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
 				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>2.4.1</version>
 				</plugin>
-				<plugin>
-					<groupId>org.fornax.toolsupport</groupId>
-					<artifactId>fornax-oaw-m2-plugin</artifactId>
-					<version>3.3.0</version>
-				</plugin>
+
 				<plugin>
 					<groupId>org.eclipse.tycho.extras</groupId>
 					<artifactId>tycho-source-feature-plugin</artifactId>
@@ -127,6 +124,7 @@
 						</execution>
 					</executions>
 				</plugin>
+
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-p2-plugin</artifactId>
@@ -147,12 +145,14 @@
 						</execution>
 					</executions>
 				</plugin>
+
+<!--
 				<plugin>
 					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-p2-repository-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
-				<!-- APACHE MAVEN PLUGINS -->
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
@@ -174,6 +174,7 @@
 						<arguments>-Prelease</arguments>
 					</configuration>
 				</plugin>
+-->
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>target-platform-configuration</artifactId>
@@ -212,6 +213,36 @@
 		</pluginManagement>
 	</build>
 
+	<repositories>
+		<repository>
+			<id>release</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/releases/${eclipse.distro}</url>
+		</repository>
+
+		<repository>
+			<id>xtext</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
+		</repository>
+
+		<repository>
+			<id>codehaus-snapshots</id>
+			<url>http://nexus.codehaus.org/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+
+		<repository>
+			<id>jeegen.sf.net</id>
+			<url>http://www.jee-generator.org/maven/</url>
+		</repository>
+	</repositories>
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>codehaus-snapshots</id>
@@ -234,34 +265,4 @@
 			<url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
 		</pluginRepository>
 	</pluginRepositories>
-
-	<repositories>
-		<repository>
-			<id>codehaus-snapshots</id>
-			<url>http://nexus.codehaus.org/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-
-		<repository>
-			<id>release</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/luna</url>
-		</repository>
-
-		<repository>
-			<id>xtext</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
-		</repository>
-
-		<repository>
-			<id>jeegen.sf.net</id>
-			<url>http://www.jee-generator.org/maven/</url>
-		</repository>
-	</repositories>
 </project>
