--- a/Updatesite/org.jeegen.releng/pom.xml
+++ b/Updatesite/org.jeegen.releng/pom.xml
@@ -9,13 +9,12 @@
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
-	<!-- this is the parent POM from which all modules inherit common settings -->
 	<properties>
 		<tycho-version>0.24.0</tycho-version>
 		<tycho-extras-version>0.24.0</tycho-extras-version>
 		<antrun-version>1.8</antrun-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<eclipse.distro>mars</eclipse.distro>
+		<eclipse.distro>luna</eclipse.distro>
 		<source.update.site>http://www.jee-generator.org/updates/release/</source.update.site>
 	</properties>
 
@@ -30,9 +29,8 @@
 	</modules>
 
 	<build>
-		<!--resources> <resource> <directory> [your folder here] </directory> </resource> 
-			</resources -->
 		<plugins>
+<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -41,8 +39,8 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+-->
 			<plugin>
-				<!-- enable tycho build extension -->
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho-version}</version>
@@ -69,6 +67,7 @@
 			</plugin>
 -->
 		</plugins>
+
 		<pluginManagement>
 			<plugins>
 				<plugin>
