--- a/JEE7/org.jeegen.jee7/pom.xml
+++ b/JEE7/org.jeegen.jee7/pom.xml
@@ -36,6 +36,13 @@
 		</license>
 	</licenses>
 
+	<scm>
+		<connection>https://github.com/stmork/jeegen</connection>
+		<developerConnection>https://github.com/stmork</developerConnection>
+		<url>https://github.com/stmork/jeegen/tree/master/JEE7/org.jeegen.jee7</url>
+		<tag>JEE</tag>
+	</scm>
+
 	<build>
 		<resources>
 			<resource>
