--- a/JEE6/org.jeegen.jee6.util/pom.xml
+++ b/JEE6/org.jeegen.jee6.util/pom.xml
@@ -33,8 +33,8 @@
 	</licenses>
 
 	<scm>
-		<connection>https://github.com/stmork/jeegen</connection>
-		<developerConnection>https://github.com/stmork</developerConnection>
+		<connection>scm:https://github.com/stmork/jeegen</connection>
+		<developerConnection>scm:https://github.com/stmork</developerConnection>
 		<url>https://github.com/stmork/jeegen/tree/master/JEE6/org.jeegen.jee6.util</url>
 		<tag>JEE</tag>
 	</scm>
@@ -103,10 +103,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.9.1</version>
 				<configuration>
 					<reportPlugins>
 						<plugin>
@@ -117,6 +118,7 @@
 					</reportPlugins>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -138,14 +140,27 @@
 				</executions>
 			</plugin>
 		</plugins>
+
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.8</version>
+				<version>3.4.1</version>
 			</extension>
 		</extensions>
 	</build>
+
+<!-- 
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.3</version>
+			</plugin>
+		</plugins>
+	</reporting>
+ -->
 
 	<dependencies>
 		<dependency>
