--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -16,9 +16,9 @@
 	<property name="module.jar"           value="ldapcontext.jar"/>
 	<property name="module.xml"           value="module.xml"/>
 	
-	<property name="findbugs.home"        value="./findbugs"/>
-	<property name="findbugs.exclude"     value="./findbugs-exclude.xml"/>
-	<property name="findbugs.results"     value="./findbugs-results.xml"/>
+	<property name="spotbugs.home"        value="./spotbugs"/>
+	<property name="spotbugs.exclude"     value="./findbugs-exclude.xml"/>
+	<property name="spotbugs.results"     value="./findbugs-results.xml"/>
 
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
@@ -55,8 +55,8 @@
 		</fileset>
 	</path>
 
-	<path id="findbugs.lib">
-		<fileset dir="${findbugs.home}">
+	<path id="spotbugs.lib">
+		<fileset dir="${spotbugs.home}">
 			<include name="**/*.jar"/>
 		</fileset>  
 	</path>
@@ -111,7 +111,7 @@
 	<!--            Setting up target definitions             -->
 	<!-- ==================================================== -->
 
-	<taskdef name="findbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="findbugs.lib"/>
+	<taskdef name="spotbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="spotbugs.lib"/>
 	<taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpathref="junit.lib"/>
 
 	<!-- ==================================================== -->
@@ -127,7 +127,7 @@
 	</target>
 
 	<target name="clean">
-		<delete file="${findbugs.results}"/>
+		<delete file="${spotbugs.results}"/>
 		<delete file="${war}" />
 		<delete dir="${bin-path}" />
 		<delete dir="${instr-path}" />
@@ -203,20 +203,20 @@
 		</junit>
 	</target>
 
-	<target name="findbugs" depends="compile">
+	<target name="spotbugs" depends="compile">
 		<echo message="Checking ${ant.project.name}..."/>
-		<findbugs jvmargs="-Xmx512m" home="${findbugs.home}"
+		<spotbugs jvmargs="-Xmx512m" home="${spotbugs.home}"
 				output="xml:withMessages"
-				outputFile="${findbugs.results}"
+				outputFile="${spotbugs.results}"
 				classpathref="compile.path"
 				effort="max"
 				maxRank="20"
 				reportlevel="low"
-				excludeFilter="${findbugs.exclude}"
+				excludeFilter="${spotbugs.exclude}"
 				failonerror="true">
 			<sourcePath path="${src-path}:${src-gen-path}"/>
 			<class location="${bin-path}"/> 
 			<auxclasspath refid="compile.path"/>
-		</findbugs>
+		</spotbugs>
 	</target>
 </project>
