Sorted build dependencies.

--- a/JEE7/org.jeegen.jee7/build.xml
+++ b/JEE7/org.jeegen.jee7/build.xml
@@ -24,20 +24,21 @@
 			<include name="com.google.guava*.jar"/>
 			<include name="com.google.inject*.jar"/>
 			<include name="com.ibm.icu*.jar"/>
-			<include name="de.itemis.xtext.*.jar"/>
-			<include name="org.antlr.*.jar"/>
+			<include name="org.jeegen.jee7*.jar"/>
+			<include name="org.antlr.runtime*.jar"/>
 			<include name="org.apache.commons.cli*.jar"/>
 			<include name="org.apache.commons.logging*.jar"/>
 			<include name="org.apache.log4j*.jar"/>
-			<include name="org.apache.xerces*.jar"/>
 			<include name="org.eclipse.emf.*.jar"/>
-			<include name="org.eclipse.xpand*.jar"/>
-			<include name="org.eclipse.xtend*.jar"/>
-			<include name="org.eclipse.xtext*.jar"/>
+			<include name="org.eclipse.x*.jar"/>
 			<include name="org.eclipse.text*.jar"/>
-			<include name="org.eclipse.jdt*.jar"/>
+			<include name="org.eclipse.core*.jar"/>
 			<include name="org.eclipse.equi*.jar"/>
+			<include name="org.eclipse.jdt*.jar"/>
+			<include name="org.eclipse.osgi*.jar"/>
+			<include name="org.osgi*.jar"/>
 			<include name="javax.inject*.jar"/>
+			<include name="jakarta.inject*.jar"/>
 			<include name="stringtemplate*.jar"/>
 			<include name="org.objectweb.asm_5.0.1*.jar"/>
 
