--- a/JEE7/org.jeegen.jee7.feature/pom.xml
+++ b/JEE7/org.jeegen.jee7.feature/pom.xml
@@ -19,19 +19,19 @@
 		<developer>
 			<name>Steffen Mork</name>
 			<email>info@jee-generator.org</email>
-			<url>http://morknet.de</url>
+			<url>https://morknet.de</url>
 		</developer>
 		<developer>
 			<name>Dominik Pieper</name>
 			<email>info@jee-generator.org</email>
-			<url>http://pieperhome.de</url>
+			<url>https://pieperhome.de</url>
 		</developer>
 	</developers>
 
 	<licenses>
 		<license>
 			<name>Eclipse Public License</name>
-			<url>http://www.eclipse.org/legal/epl-v20.html</url>
+			<url>https://www.eclipse.org/legal/epl-v20.html</url>
 		</license>
 	</licenses>
 
